[gd_scene load_steps=19 format=3 uid="uid://b8kph1r1jhejt"]

[ext_resource type="Script" path="res://Scripts/Inventory/Inventory.gd" id="1_j5x7l"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryUI.gd" id="1_lloe7"]
[ext_resource type="Texture2D" uid="uid://bxx1fnbelg0lt" path="res://Art/Objects/trashbag.png" id="3_obxsk"]
[ext_resource type="Texture2D" uid="uid://dem8ysio7k10h" path="res://Art/Objects/coin_pouch.png" id="4_fqtxd"]
[ext_resource type="PackedScene" uid="uid://c1c8vyfyanpjj" path="res://Scenes/Inventory/ItemSlot.tscn" id="5_cpe76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg0yy"]
bg_color = Color(0.6, 0.6, 0.6, 0.596078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_er81x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f45o8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ob8ue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1v5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jq87s"]

[sub_resource type="Theme" id="Theme_fafpq"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_er81x")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_f45o8")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_ob8ue")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_n1v5l")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_jq87s")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3pfj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q37ys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_krmyt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3234"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l00ux"]

[sub_resource type="Theme" id="Theme_pjwnp"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_s3pfj")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_q37ys")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_krmyt")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_j3234")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_l00ux")

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_j5x7l")

[node name="InventoryUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -498.0
offset_top = -266.0
offset_right = -98.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.49067, 2.49067)
script = ExtResource("1_lloe7")

[node name="InventoryPanel" type="Panel" parent="InventoryUI"]
layout_mode = 0
offset_top = -18.8704
offset_right = 400.0
offset_bottom = 231.13
theme_override_styles/panel = SubResource("StyleBoxFlat_eg0yy")

[node name="DropButton" type="Button" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 303.131
offset_top = 194.325
offset_right = 381.131
offset_bottom = 221.325
pivot_offset = Vector2(19, 13)
text = "Drop Item"

[node name="InventoryLabel" type="Label" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 2.81049
offset_right = 107.0
offset_bottom = 25.8105
text = "Inventory"

[node name="TrashTexture" type="TextureRect" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 315.0
offset_top = 1.2045
offset_right = 2363.0
offset_bottom = 2049.2
scale = Vector2(0.0120302, 0.0120302)
texture = ExtResource("3_obxsk")

[node name="Button" type="Button" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="TrashLabel" type="Label" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 344.486
offset_top = 5.62099
offset_right = 384.486
offset_bottom = 28.621
text = "0"

[node name="CoinImage" type="TextureRect" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 231.0
offset_top = -2.80957
offset_right = 1431.0
offset_bottom = 1179.19
scale = Vector2(0.0260892, 0.0260892)
texture = ExtResource("4_fqtxd")

[node name="CoinLabel" type="Label" parent="InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 6.39401
offset_right = 304.0
offset_bottom = 29.394
text = "0"

[node name="ScrollDescription" type="ScrollContainer" parent="InventoryUI/InventoryPanel"]
layout_mode = 2
offset_left = 19.6734
offset_top = 187.098
offset_right = 289.673
offset_bottom = 237.098
theme = SubResource("Theme_fafpq")

[node name="Description" type="Label" parent="InventoryUI/InventoryPanel/ScrollDescription"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 15
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryUI/InventoryPanel"]
custom_minimum_size = Vector2(360, 150)
layout_mode = 2
offset_left = 20.4764
offset_top = 27.7034
offset_right = 380.476
offset_bottom = 177.703
theme = SubResource("Theme_pjwnp")

[node name="CenterContainer" type="CenterContainer" parent="InventoryUI/InventoryPanel/ScrollContainer"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer"]
layout_mode = 2
columns = 8

[node name="ItemSlot" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot2" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot3" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot4" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot5" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot6" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot7" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot8" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot9" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot10" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot11" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot12" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot13" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot14" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot15" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot16" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot17" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot18" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot19" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot20" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot21" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot22" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot23" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot24" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot25" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot26" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot27" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot28" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot29" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot30" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot31" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[node name="ItemSlot32" parent="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("5_cpe76")]
layout_mode = 2

[connection signal="pressed" from="InventoryUI/InventoryPanel/DropButton" to="." method="drop_item"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot2" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot3" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot4" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot5" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot6" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot7" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot8" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot9" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot10" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot11" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot12" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot13" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot14" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot15" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot16" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot17" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot18" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot19" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot20" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot21" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot22" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot23" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot24" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot25" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot26" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot27" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot28" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot29" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot30" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot31" to="." method="on_item_slot_clicked"]
[connection signal="CLICKED" from="InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot32" to="." method="on_item_slot_clicked"]
